<resources>
    <string name="app_name">Gauntlet</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="title_activity_epub">EPubActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_vids">VidsActivity</string>
    <string name="title_activity_simple_to_do">SimpleToDoActivity</string>
    <string name="title_activity_synergy">SynergyActivity</string>
    <string name="title_activity_growth_areas">GrowthAreasActivity</string>
    <string name="menu_complete">Complete</string>
    <string name="menu_move">Move</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_push">Push</string>
    <string name="menu_show_templates">Templates</string>
    <string name="menu_shelved">Shelved</string>
    <string name="menu_archives">Archives</string>
    <string name="change_tuning">Change Tuning</string>
    <string name="set_num_strings">Set Number of Strings</string>
    <string name="set_fret_range">Set Fret Range</string>
    <string name="title_activity_synergy_master_list">SynergyMasterListActivity</string>
    <string name="title_activity_synergy_list">SynergyListActivity</string>
    <string name="title_activity_synergy_master_archive">SynergyMasterArchiveActivity</string>
    <string name="title_activity_synergy_master_template">SynergyMasterTemplateActivity</string>
    <string name="title_activity_synergy_template">SynergyTemplateActivity</string>
    <string name="title_activity_synergy_v5_archive">SynergyV5ArchiveActivity</string>
    <string name="title_activity_synergy_archive">SynergyArchiveActivity</string>
    <string name="title_activity_muse_main">MuseMainActivity</string>
    <string name="title_activity_muse_clef">MuseClefActivity</string>
    <string name="title_activity_guitar">GuitarActivity</string>
    <string name="title_activity_muse_keyboard">MuseKeyboardActivity</string>
    <string name="title_activity_synergy_main">SynergyMainActivity</string>
    <string name="title_activity_alias_list">Alias List</string>
    <string name="title_activity_book_segments">Book Segments</string>
    <string name="title_activity_alias_input">Input Alias</string>
    <string name="title_activity_book_segments_input">Book Segments Input</string>
    <string name="title_activity_synergy_templates">SynergyTemplatesActivity</string>
    <string name="title_activity_synergy_archives">SynergyArchivesActivity</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="menu_set_display_name">Display</string>
    <string name="title_activity_audio_list">AudioListActivity</string>
    <string name="title_activity_audio_display">AudioDisplayActivity</string>
    <string name="menu_add_keyboard_session_notes">Add Session Note</string>
    <string name="title_activity_session_list">SessionListActivity</string>
    <string name="title_activity_session_display">SessionDisplayActivity</string>
    <string name="menu_shelveAll">Shelve All Categorized</string>
    <string name="title_activity_test_mode">TestModeActivity</string>
    <string name="title_activity_split_item">SplitItemActivity</string>
    <string name="previousButtonString"><![CDATA[<<]]></string>
    <string name="nextButtonString"><![CDATA[>>]]></string>
    <string name="menu_remove_marked_audio">Remove Marked Audio</string>
    <string name="menu_push_all">Push All</string>
    <string name="menu_set_tag_string">Tags</string>
    <string name="menu_done">Done</string>
    <string name="title_activity_tapestry_main">TapestryMainActivity</string>
    <string name="menu_reset_player">Reset Player</string>
    <string name="title_activity_image_list_v2">ImageListV2Activity</string>
    <string name="menu_add_link">Add Link</string>
    <string name="menu_link_to_node">Link Node</string>
    <string name="title_activity_meta_browser">MetaBrowserActivity</string>
    <string name="menu_browse_meta">Browse Meta</string>
    <string name="title_activity_audio_list_v2">AudioListV2Activity</string>
    <string name="menu_update_template">Update Template</string>
    <string name="menu_test">Test</string>
    <string name="title_activity_pdf_list">PdfListActivity</string>
    <string name="toggle_frag_shuffle">Toggle Frag Shuffle</string>
    <string name="title_activity_home_list">Gauntlet</string>
    <string name="title_activity_node_comparison">NodeComparisonActivity
    </string>
    <string name="menu_go_to_audio">Go To Audio</string>
    <string name="title_activity_quick_tag">QuickTagActivity</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="title_activity_image_grid">ImageGridActivity</string>
    <string name="menu_go_to_synergy">Go To Synergy</string>
    <string name="menu_go_to_pdfs">Go To PDFs</string>
    <string name="menu_go_to_images_main">Go To Images</string>
    <string name="menu_go_to_audio_main">Go To Audio</string>
    <string name="menu_go_to_audio_player">Go To Audio Player</string>
    <string name="home">Home</string>
    <string name="enter_a_new_item">Enter a new item</string>
    <string name="add_item">Add Item</string>
    <string name="toggle_sort">Toggle Sort</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="shuffle">Shuffle</string>
    <string name="title_activity_mnemosyne_v5_scan">MnemosyneV5ScanActivity
    </string>
    <string name="add_media_root">Add Media Root</string>
    <string name="title_activity_audio_list_v5">Audio List V5</string>
    <string name="title_activity_audio_display_v5">Audio Display V5</string>
    <string name="title_activity_image_display_v5">Image Display V5</string>
    <string name="title_activity_image_list_v5">Images V5</string>
    <string name="export_xml">Export XML</string>
    <string name="title_activity_audio_list_v51">AudioListV51Activity</string>
    <string name="title_activity_audio_list_v52">AudioListV52Activity</string>
    <string name="title_activity_image_list_v52">ImageListV52Activity</string>
    <string name="queue_folder">Queue Folder</string>
    <string name="title_activity_media_player_service">
        MediaPlayerServiceActivity
    </string>
    <string name="title_activity_hive_main">HiveMainActivity</string>
    <string name="title_activity_hive_root">HiveRootActivity</string>
    <string name="title_activity_synergy_drawer">SynergyDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hive_export_xml">Hive Export XML</string>
    <string name="activate_all">Activate All</string>
    <string name="title_hiveroot_list">HiveRoots</string>
    <string name="title_hiveroot_detail">HiveRoot Detail</string>
    <string name="copy_all_to_staging">Copy All To Staging</string>
    <string name="move_all_to_staging">Move All To Staging</string>
    <string name="intake_all">Intake All</string>
    <string name="title_activity_archivist_source_entry">
        ArchivistSourceEntryActivity
    </string>
    <string name="title_activity_archivist_add_source_type">
        ArchivistAddSourceTypeActivity
    </string>
    <string name="title_activity_archivist_add_source">
        ArchivistAddSourceActivity
    </string>
    <string name="title_activity_archivist_add_source_excerpt">
        ArchivistAddSourceExcerptActivity
    </string>
    <string name="tag4scrp">Tag4Scrp</string>
    <string name="title_activity_archivist_source_excerpt_detail">Archivist Source Excerpt Detail
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="long_text_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pellentesque ante nec mauris placerat dignissim. Nulla semper venenatis orci eu dictum. Sed eu vulputate metus, id pretium libero. Sed mattis, est quis aliquet iaculis, erat eros pellentesque mauris, a porta mi lacus quis ex. In vitae ante vel arcu vehicula vulputate. Curabitur pretium leo nec elementum pharetra. Phasellus id placerat mi, non imperdiet turpis. Suspendisse consequat dui ut lacus volutpat dignissim. Quisque et dapibus metus, nec euismod sapien. Nam at magna ut elit scelerisque ornare in eget felis. Curabitur ac erat sit amet ligula mollis auctor at porttitor lectus. In ac viverra nisl.
\n\nPhasellus consectetur facilisis ornare. Sed vitae iaculis diam. Morbi facilisis lectus at leo aliquam, nec finibus massa pharetra. Donec cursus velit a elit vehicula imperdiet. Aenean neque massa, dapibus vitae pretium ut, tristique a nisi. Curabitur ut ipsum orci. Ut tincidunt mi viverra sem iaculis mollis. Mauris nec laoreet erat, id congue arcu. Aenean ac convallis enim.
\n\nMauris vitae ultrices sapien. Cras congue turpis id magna pretium mattis. Proin odio sem, tempor eu dictum ut, ornare ut ante. Nullam sed vehicula dui, ut aliquam justo. Pellentesque dapibus posuere convallis. Quisque at lorem scelerisque, iaculis libero in, convallis ex. Suspendisse et turpis dignissim, scelerisque ex sed, viverra magna. Curabitur nec mattis est. Pellentesque ornare vehicula mi. Nulla faucibus porttitor justo, sit amet placerat neque dignissim nec. Nulla pharetra eu diam eget dignissim. Etiam maximus vitae ex eu gravida. Donec ac bibendum nisl. In consequat a lorem a lobortis. Sed felis ipsum, pellentesque eget efficitur ac, condimentum id magna.
\n\nAliquam vitae imperdiet nisl, ac ultrices lectus. Fusce eu blandit leo, nec gravida mi. Nam sollicitudin eget dui a mattis. Maecenas arcu massa, congue sit amet urna id, vehicula viverra ante. Duis ac libero ligula. Sed non semper magna. In mattis quis libero sit amet aliquet. Mauris ornare lectus sed quam imperdiet finibus. Fusce sagittis orci metus, sed commodo tortor rhoncus vitae. Maecenas egestas quam scelerisque ex vulputate, sed tempus odio maximus. Sed dictum suscipit diam, non auctor dui rhoncus vel. Donec sit amet erat eget mi semper vulputate.
\n\nIn interdum eros in ullamcorper tristique. Sed elit elit, viverra eget elit eu, rutrum hendrerit tortor. Fusce eget arcu eu quam tincidunt placerat. Sed nec tincidunt dolor. Donec sodales, ex id sollicitudin molestie, diam elit dictum diam, eget mollis elit diam a sapien. In hac habitasse platea dictumst. Vivamus eu risus sed mauris malesuada condimentum. Vestibulum molestie odio et ipsum cursus mollis. Integer vel vehicula urna, eget scelerisque nulla. Donec a ex nibh. Integer vel tellus in quam porttitor gravida nec sed lacus. In quis ultricies justo, ut lobortis sem. Etiam felis urna, molestie vitae dui placerat, viverra consequat velit.
    </string>
    <string name="tags_go_here_dev_placeholder">tags go here (dev placeholder)</string>
    <string name="xml_ops">XML Ops</string>
    <string name="likes">Likes</string>
    <string name="textview">TextView</string>
    <string name="profile_name">NAME</string>
    <string name="profile_lastname">LAST NAME</string>
    <string name="last_name_label">Last name</string>
    <string name="name_label">Name</string>
    <string name="profile_avatar_cd">Profile\'s avatar</string>
    <string name="like">Like</string>
    <string name="observable_fields_activity_text">Observable Fields activity</string>
    <string name="viewmodel_activity_text">ViewModel activity</string>
    <string name="observableactivity_activity_label_text">Uses ObservableFields to automatically refresh the UI and showcases common bad practices</string>
</resources>