<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.mnemosyne.AudioDisplayActivity">
    <item android:id="@+id/action_set_tag_string"
        android:title="@string/menu_set_tag_string"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_set_display_name"
        android:title="@string/menu_set_display_name"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_reset_player"
        android:title="@string/menu_reset_player"
        app:showAsAction="ifRoom|withText"/>


    <item android:id="@+id/action_go_to_synergy"
        android:title="@string/menu_go_to_synergy"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_pdfs"
        android:title="@string/menu_go_to_pdfs"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_images"
        android:title="@string/menu_go_to_images_main"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_audio_main"
        android:title="@string/menu_go_to_audio_main"
        app:showAsAction="ifRoom|withText"/>
</menu>