<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.synergy.v5.SynergyV5ListActivity">
    <item android:id="@+id/action_archive"
        android:title="@string/menu_archive"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_toggle_shuffle_fragments"
          android:title="@string/toggle_frag_shuffle"
          app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_go_to_pdfs"
        android:title="@string/menu_go_to_pdfs"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_images"
        android:title="@string/menu_go_to_images_main"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_audio_main"
        android:title="@string/menu_go_to_audio_main"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_audio_player"
        android:title="@string/menu_go_to_audio_player"
        app:showAsAction="ifRoom|withText"/>
</menu>
