<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.mnemosyne.AudioListV2Activity">

    <item android:id="@+id/action_go_to_home_screen"
          android:title="@string/home"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_queue_folder_to_playlist"
          android:title="@string/queue_folder"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_hive_export_all_to_xml"
          android:title="@string/hive_export_xml"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_export_all_to_xml"
          android:title="@string/export_xml"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_copy_all_to_staging"
          android:title="@string/copy_all_to_staging"
          app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_move_all_to_staging"
          android:title="@string/move_all_to_staging"
          app:showAsAction="ifRoom|withText"/>
</menu>
