<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.mnemosyne.AudioListV2Activity">

    <item android:id="@+id/action_go_to_synergy"
        android:title="@string/menu_go_to_synergy"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_pdfs"
        android:title="@string/menu_go_to_pdfs"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_images"
        android:title="@string/menu_go_to_images_main"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_go_to_audio_player"
        android:title="@string/menu_go_to_audio_player"
        app:showAsAction="ifRoom|withText"/>
</menu>
