<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.mnemosyne.AudioDisplayActivity">

    <item android:id="@+id/action_set_tag_string"
        android:title="@string/menu_set_tag_string"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_tag_mark_for_transcription"
        android:title="@string/tag4scrp"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_reset_player"
        android:title="@string/menu_reset_player"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_go_to_home_screen"
          android:title="@string/home"
          app:showAsAction="ifRoom|withText"/>
</menu>