<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nineworldsdeep.gauntlet.synergy.v2.SynergyMainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_toggle_sort"
        android:title="@string/toggle_sort"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_show_shelved"
        android:title="@string/menu_shelved"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_go_to_home_screen"
          android:title="@string/home"
          app:showAsAction="ifRoom|withText"/>
</menu>
